--- a/templates/ui-kit/site_layout.html
+++ b/templates/ui-kit/site_layout.html
@@ -37,8 +37,11 @@
         <div class="content-area">
             <div class="colored-background"></div>
             <div class="content-stage container">
+            <div class="aix-desktop-only">This demo is only available on larger screens.</div>
+            <div class="aix-demo-content">
                 {% block content %}
                 {% endblock %}
+            </div>
             </div>
         </div>
     </div>
