--- a/static/ui-kit/custom/scss/site-layout.scss
+++ b/static/ui-kit/custom/scss/site-layout.scss
@@ -5,11 +5,11 @@ body {
 .site-wrapper {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .content-wrapper {
-    flex: 1;
+    flex-grow: 1;
 }
 
 .header__container {
