--- a/grocery/templates/grocery.html
+++ b/grocery/templates/grocery.html
@@ -10,60 +10,75 @@
 {% block description %}Using image recognition identify the product on the shelf{% endblock %}
 
 {% block content %}
-    <div class="row row-special" id="search_row">
+    <div class="row row-special" id="upload_row">
+        <div class="col-xs col-lg-2"></div>
+        <div class="col-xs col-lg-6">
+
+            <div class="input-field input-field--fixed" data-init="auto">
+                <input type="text" id="input_text" placeholder="Upload Image or Select from samples below :)" readonly>
+                <div class="row row-special" >
+
+                    <input type="file" id="input_file" class="form-control input-lg col-xs col-lg-8" accept="image/*" />
+
+                    <button id="upload_button" class="button button--primary col-xs col-lg-1" for="input_file" >
+                        <i class="icon icon-087-upload icon--s5" aria-hidden="true"></i>
+                        Upload
+                    </button>
                 <div class="col-xs col-lg-2"></div>
-                <div class="col-xs col-lg-6">
-
-                    <div class="input-field input-field--fixed" data-init="auto">
-                        <input type="text" id="input_text" placeholder="Upload Image or Select from samples below :)" readonly>
-                        <div class="row row-special" >
-
-                            <input type="file" id="input_file" class="form-control input-lg col-xs col-lg-8" accept="image/*" />
-
-                            <button id="upload_button" class="button button--primary col-xs col-lg-1" for="input_file" >
-                                <i class="icon icon-087-upload icon--s5" aria-hidden="true"></i>
-                                Upload
-                            </button>
-                        <div class="col-xs col-lg-2"></div>
-                        </div>
-                    </div>
                 </div>
-                <div class="col-xs col-lg-3"></div>
             </div>
+        </div>
+        <div class="col-xs col-lg-3"></div>
+    </div>
 
 
 
-            <div class="row row-special" id="question_row">
-                <div class="col-xs col-lg-1"></div>
-                <div class="col-xs col-lg-10">
-                    <div class="row row-special">
-                        <div class="col-xs-12 col-md-auto" id="question"></div>
-                        <div class="loader-spinner loader-spinner--small " id="spinner"></div>
-                    </div>
-                </div>
-                <div class="col-xs col-lg-1"></div>
+    <div class="row row-special" id="message_row">
+        <div class="col-xs col-lg-1"></div>
+        <button id="back_button" class="button button--primary col-xs col-lg-2"  >
+                        <i class="icon icon-003-arrow-left icon--s5" aria-hidden="true"></i>
+                        Back
+        </button>
+        <div class="col-xs col-lg-8">
+            <div class="row row-special">
+                <div class="col-xs-12 col-md-auto" id="message"></div>
+                <div class="loader-spinner loader-spinner--small " id="spinner"></div>
             </div>
+        </div>
+        <div class="col-xs col-lg-1"></div>
+    </div>
 
-            <div class="row row-special flex-items-xs-top" id="suggestions_row">
+    <div class="row row-special flex-items-xs-top" id="suggestions_row1">
 
-                <div class="col-xs col-lg-1"></div>
-                <img class="col-xs col-lg-3" id=img_sug1 src='{{ url_for('static', filename='assets/grocery_images/small_static_8.jpg') }}' vspace="20"></img>
-                <img class="col-xs col-lg-3" id=img_sug2 src='{{ url_for('static', filename='assets/grocery_images/small_static_14.jpg') }}' vspace="20"></img>
-                <img class="col-xs col-lg-3" id=img_sug3 src='{{ url_for('static', filename='assets/grocery_images/small_static_17.jpg') }}' vspace="20"></img>
-                <div class="col-xs col-lg-1"></div>
+        <div class="col-xs col-lg-1"></div>
+        <img class="col-xs col-lg-3" id=img_sug1  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=img_sug2  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=img_sug3  vspace="20"></img>
+        <div class="col-xs col-lg-1"></div>
 
 
-            </div>
+    </div>
 
-            <div class="row row-special flex-items-xs-bottom" >
+    <div class="row row-special flex-items-xs-middle" id="suggestions_row2">
 
-                <div class="col-xs col-lg-1"></div>
-                <img class="col-xs col-lg-3" id=img_sug4 src='{{ url_for('static', filename='assets/grocery_images/small_static_8.jpg') }}'></img>
-                <img class="col-xs col-lg-3" id=img_sug5 src='{{ url_for('static', filename='assets/grocery_images/small_static_14.jpg') }}'></img>
-                <img class="col-xs col-lg-3" id=img_sug6 src='{{ url_for('static', filename='assets/grocery_images/small_static_17.jpg') }}'></img>
-                <div class="col-xs col-lg-1"></div>
+        <div class="col-xs col-lg-1"></div>
+        <img class="col-xs col-lg-3" id=img_in  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=img_out1  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=img_out2  vspace="20"></img>
+        <div class="col-xs col-lg-1"></div>
 
-            </div>
+
+    </div>
+
+    <div class="row row-special flex-items-xs-bottom" id="suggestions_row3" >
+
+        <div class="col-xs col-lg-1"></div>
+        <img class="col-xs col-lg-3" id=img_sug4  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=img_sug5  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=img_sug6  vspace="20"></img>
+        <div class="col-xs col-lg-1"></div>
+
+    </div>
 
 {% endblock %}
 
