minor changes; deleted the gallery view

--- a/grocery/templates/grocery.html
+++ b/grocery/templates/grocery.html
@@ -7,7 +7,7 @@
 
 {% block title %}Product Identification{% endblock %}
 
-{% block description %}Using image recognition identify the product on the shelf{% endblock %}
+{% block description %}Using image recognition to identify the product on the shelf{% endblock %}
 
 {% block content %}
     <div class="row row-special" id="upload_row">
