Add Material Demo to Swisscom website

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,7 @@
                 <div class="demo">CHURN: <a href="/churn">/churn</a></div>
                 <div class="demo">Emotion Recognition: <a href="/emotion">/emotion</a></div>
                 <div class="demo">Grocery Identification: <a href="/grocery">/grocery</a></div>
+                <div class="demo">Material Classification: <a href="/material">/material</a></div>
                 <div class="demo">GSW: <a href="/gsw">/gsw</a></div>
                 <div class="demo">Machine Translation: <a href="/translate">/translate</a></div>
                 <div class="demo">Slot Filling and Intent Detection: <a href="/sfid">/sfid</a></div>
