--- a/material/templates/material.html
+++ b/material/templates/material.html
@@ -7,7 +7,7 @@
 
 {% block title %}Material Recognition and Localization{% endblock %}
 
-{% block description %}Using image recognition to classify and visualize how computer understand materials in the wild{% endblock %}
+{% block description %}Kaicheng Yu; Mathieu Salzmann, CVLab, EPFL \n Using image recognition to classify and visualize how computer understand materials in the wild{% endblock %}
 
 {% block content %}
     <div class="row row-special" id="upload_row">
@@ -55,6 +55,11 @@
         <img class="col-xs col-lg-3" id=img_sug2  vspace="20"></img>
         <img class="col-xs col-lg-3" id=img_sug3  vspace="20"></img>
         <div class="col-xs col-lg-1"></div>
+{#        <div class="col-xs col-lg-1"></div>#}
+{#        <img class="col-xs col-lg-3" id=img_sug1  vspace="20"></img>#}
+{#        <img class="col-xs col-lg-3" id=img_sug2  vspace="20"></img>#}
+{#        <img class="col-xs col-lg-3" id=img_sug3  vspace="20"></img>#}
+{#        <div class="col-xs col-lg-1"></div>#}
 
 
     </div>
@@ -79,6 +84,27 @@
         <div class="col-xs col-lg-1"></div>
 
     </div>
+
+
+    <div class="row row-special flex-items-xs-bottom" id="result_row1" >
+
+        <div class="col-xs col-lg-1"></div>
+        <img class="col-xs col-lg-3" id=result_img0  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=result_img1  vspace="20"></img>
+        <div class="col-xs col-lg-1"></div>
+
+    </div>
+
+
+    <div class="row row-special flex-items-xs-bottom" id="result_row2" >
+
+        <div class="col-xs col-lg-1"></div>
+        <img class="col-xs col-lg-3" id=result_img2  vspace="20"></img>
+        <img class="col-xs col-lg-3" id=result_img3  vspace="20"></img>
+        <div class="col-xs col-lg-1"></div>
+
+    </div>
+
 
 {% endblock %}
 
