--- a/material/templates/material.html
+++ b/material/templates/material.html
@@ -7,7 +7,10 @@
 
 {% block title %}Material Recognition and Localization{% endblock %}
 
-{% block description %}Kaicheng Yu; Mathieu Salzmann, CVLab, EPFL \n Using image recognition to classify and visualize how computer understand materials in the wild{% endblock %}
+{% block description %}
+    <p>Kaicheng Yu, Mathieu Salzmann, CVLab, EPFL</p>
+    Using image recognition to classify and visualize how computer understand materials in the wild
+{% endblock %}
 
 {% block content %}
     <div class="row row-special" id="upload_row">
