--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
         <div class="row" id="working">
             <div class="col-md-1"></div>
             <div class="col-md-5">
+                <div class="demo_name">SQL Chatbot </div>
                 <div class="demo_name">Neural Programmer Football </div>
                 <div class="demo_name">Key Phrase Extraction </div>
                 <div class="demo_name">Key Phrase Extraction (Group) </div>
@@ -40,6 +41,7 @@
                 <div class="demo_name">Machine Translation </div>
             </div>
             <div class="col-md-5">
+                <div class="demo_url"><a href="/seq2sql">/seq2sql</a></div>
                 <div class="demo_url"><a href="/neural_programmer/steps">/neural_programmer/steps</a></div>
                 <div class="demo_url"><a href="/kp">/kp</a></div>
                 <div class="demo_url"><a href="/kp/emb">/kp/emb</a></div>
