--- a/summarization/templates/summarization.html
+++ b/summarization/templates/summarization.html
@@ -1,79 +1,70 @@
-{% extends "ui-kit/basic_io_layout.html" %}
+{% extends "ui-kit/site_layout.html" %}
 
 {% block head %}
     {{ super() }}
     {#Add custom styles here.
-    <link rel="stylesheet" href="{{ url_for('yourdemo.static', filename='yourdemo.css') }}">#}
+    <link rel="stylesheet" href="{{ url_for('summarization.static', filename='summarization.css') }}">#}
 {% endblock %}
 
-{% block title %}{#Enter here your demo title. Keep it short. There is extra space for a description below.#}{% endblock %}
+{% block title %}Summarization{#Enter here your demo title. Keep it short. There is extra space for a description below.#}{% endblock %}
 
-{% block description %}{#One line for for demo description#}{% endblock %}
+{% block description %}Using deep neural networks, produce a summary from a news article{#One line for for demo description#}{% endblock %}
 
-{% block input_placeholder_text %}{{ super() }}{#Customize the input field placeholder text by removing {{ super() }} and entering your own.#}{% endblock %}
+{% block content %}
+    <div id="tab-input" class="row row-special">
+        <div class="col-xs col-md-10">
+            <div class="input-field input-field--static-label" data-init="auto">
+                <input type="text" id="url-submit" placeholder="Url Input">
+                <label for="url-submit">Enter an article from an url</label>
+            </div>
 
-{% block submit_button_text %}{{ super() }}{#Customize the submit button text by removing {{ super() }} and entering your own.#}{% endblock %}
+        </div>
+        <div class="col-xs flex-xs-bottom col-md-1">
+            <button id="btn-submit" class="aix-button button button--primary button--full disabled">
+                <span>{% block submit_button_text %}Submit{% endblock %}</span>
+            </button>
 
-{% block samples %}
-    {{ super() }}
-    {#Remove «{{ super() }}» and add you custom makrup if you want to show something different than the default sample list. There is a sample markup below#}
-    {#<div class="sample-container">
-        <div class="sample-container__header">
-            <h4>Samples</h4>
         </div>
-        <div id="sample-data" class="row">
-            <p>Sample data</p>
-        </div>
-    </div>#}
-{% endblock %}
+     <div id="tab-output" class="col">
+         <div class="input-field" data-init="auto">
 
-{% block content_result_legend %}
-    {#Put here your markup for a legend or description of the result.#}
-    <h4>Legend</h4>
-    <div class="row">
-        <div class="col-xs-12 aix-legend">
-            <span>
-                <i class="icon icon-064-record-filled orchid" aria-hidden="true"></i>
-                <span class="font--semi-bold">Class orchid</span>
-            </span>
-            <span class="aix-legend-item-description">If the class is not self explanatory there is some additional space. This text can also go over multiple lines.</span>
+         </div>
+     </div>
+
+    </div>
+    <form>
+    <div class="form-group form-inline validate invalid" role="radiogroup">
+        <label>Mode selection</label>
+            <div class="radio">
+                <input type='radio' name='dummy' id='radio-ext'>
+                <label for='radio-ext'>Extractive model</label>
+            </div>
+            <div class="radio">
+                <input type='radio' name='dummy' id='radio-gen'>
+                <label for='radio-gen'>Generative model</label>
+            </div>
+            <div class="message" id="error-message">
+                <i class="icon icon-026-exclamation-mark-circle" aria-hidden="true"></i>
+                Please select a mode
+            </div>
         </div>
-        <div class="col-xs-12 aix-legend">
-            <span>
-                <i class="icon icon-064-record-filled iris" aria-hidden="true"></i>
-                <span class="font--semi-bold">Class iris</span>
-            </span>
-            <span class="aix-legend-item-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</span>
+    </form>
+    <div id="tab-results" class="row aix-row aix-invisible">
+        <div class="col-lg-6">
+            <div id="aix-result-document" class="aix-result-content">
+                No document yet.
+            </div>
         </div>
-        <div class="col-xs-12 col-lg-6 aix-legend">
-            <span>
-                <i class="icon icon-064-record-filled pink" aria-hidden="true"></i>
-                <span>Class – pink</span>
-            </span>
-        </div>
-        <div class="col-xs-12 col-lg-6 aix-legend">
-            <span>
-                <i class="icon icon-064-record-filled turquoise" aria-hidden="true"></i>
-                <span>Class – turquoise</span>
-            </span>
-        </div>
-        <div class="col-xs-12 col-lg-6 aix-legend">
-            <span>
-                <i class="icon icon-064-record-filled apple" aria-hidden="true"></i>
-                <span>Class – apple</span>
-            </span>
-        </div>
-        <div class="col-xs-12 col-lg-6 aix-legend">
-            <span>
-                <i class="icon icon-064-record-filled petrol" aria-hidden="true"></i>
-                <span>Class – petrol</span>
-            </span>
+        <div class="col-lg-6">
+            <div id="aix-result-summary" class="aix-result-content">
+                No summary yet.
+            </div>
         </div>
     </div>
+
 {% endblock %}
 
 {% block scripts %}
     {{ super() }}
-    {#Add custom styles here.
-    <script src="{{ url_for('yourdemo.static', filename='yourdemo.js') }}"></script>#}
+    <script src="{{ url_for('summarization.static', filename='summarization.js') }}"></script>
 {% endblock %}
