Updated index and error

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                 <div class="demo_url"><a href="/kp">/kp</a></div>
                 <div class="demo_url"><a href="/kp/emb">/kp/emb</a></div>
                 <div class="demo_url"><a href="/ner">/ner</a></div>
-                <div class="demo_url"><a href="/summary">/summary</a></div>
+                <div class="demo_url"><a href="/summarization">/summarization</a></div>
                 <div class="demo_url"><a href="/sfid">/sfid</a></div>
                 <div class="demo_url"><a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
                 <div class="demo_url"><a href="/chatbot/goaloriented">/chatbot/goaloriented</a></div>
