--- a/templates/error.html
+++ b/templates/error.html
@@ -22,26 +22,59 @@
             <div class="col-md-10"><center><span id="error404">404</span><span id="welcome"> - Oops, it seems there is no demo to show here. Have you tried any of these?</span></center></div>
             <div class="col-md-1"></div>
         </div>
-        <div class="row" id="index_row">
+        <div class="row" id="working">
             <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <div class="demo">Chatbot Ubuntu - Retrieval: <a href="/chatbot/ubuntu">/chatbot/ubuntu</a></div>
-                <div class="demo">Chatbot Ubuntu - Generative: <a href="/chatbot/ubuntuseq2seq">/chatbot/ubuntuseq2seq</a></div>
-                <div class="demo">Neural Programmer Football: <a href="/neural_programmer/steps">/neural_programmer/steps</a></div>
-                <div class="demo">Neural Programmer Swisscom: <a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
-                <div class="demo">Name Entity Recognition (NER): <a href="/ner">/ner</a></div>
-                <div class="demo">Opinion Target: <a href="/opinion">/opinion</a></div>
-                <div class="demo">Key Phrase Extraction: <a href="/kp">/kp</a></div>
-                <div class="demo">Key Phrase Extraction (Group): <a href="/kp/emb">/kp/emb</a></div>
-                <div class="demo">Summarization: <a href="/summary">/summary</a></div>
-                <div class="demo">Chatbot Goal Oriented: <a href="/chatbot/goaloriented">/chatbot/goaloriented</a></div>
-                <div class="demo">Argumentation: <a href="/argumentation">/argumentation</a></div>
-                <div class="demo">CHURN: <a href="/churn">/churn</a></div>
-                <div class="demo">Emotion Recognition: <a href="/emotion">/emotion</a></div>
-                <div class="demo">Grocery Identification: <a href="/grocery">/grocery</a></div>
-                <div class="demo">GSW: <a href="/gsw">/gsw</a></div>
-                <div class="demo">Machine Translation: <a href="/translate">/translate</a></div>
-                <div class="demo">Slot Filling and Intent Detection: <a href="/sfid">/sfid</a></div>
+            <div class="col-md-5">
+                <div class="demo_name">SQL Chatbot </div>
+                <div class="demo_name">Neural Programmer Football </div>
+                <div class="demo_name">Key Phrase Extraction </div>
+                <div class="demo_name">Key Phrase Extraction (Group) </div>
+                <div class="demo_name">Name Entity Recognition (NER) </div>
+                <div class="demo_name">Summarization </div>
+                <div class="demo_name">Slot Filling and Intent Detection </div>
+                <div class="demo_name">Neural Programmer Swisscom </div>
+                <div class="demo_name">Chatbot Goal Oriented </div>
+                <div class="demo_name">Emotion Recognition </div>
+                <div class="demo_name">Grocery Identification </div>
+                <div class="demo_name">Argumentation </div>
+                <div class="demo_name">GSW </div>
+                <div class="demo_name">Machine Translation </div>
+            </div>
+            <div class="col-md-5">
+                <div class="demo_url"><a href="/seq2sql">/seq2sql</a></div>
+                <div class="demo_url"><a href="/neural_programmer/steps">/neural_programmer/steps</a></div>
+                <div class="demo_url"><a href="/kp">/kp</a></div>
+                <div class="demo_url"><a href="/kp/emb">/kp/emb</a></div>
+                <div class="demo_url"><a href="/ner">/ner</a></div>
+                <div class="demo_url"><a href="/summarization">/summarization</a></div>
+                <div class="demo_url"><a href="/sfid">/sfid</a></div>
+                <div class="demo_url"><a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
+                <div class="demo_url"><a href="/chatbot/goaloriented">/chatbot/goaloriented</a></div>
+                <div class="demo_url"><a href="/emotion">/emotion</a></div>
+                <div class="demo_url"><a href="/grocery">/grocery</a></div>
+                <div class="demo_url"><a href="/argumentation">/argumentation</a></div>
+                <div class="demo_url"><a href="/gsw">/gsw</a></div>
+                <div class="demo_url"><a href="/translate">/translate</a></div>
+
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <div class="group_title"> PREVIOUS PROJECTS </div>
+        <div class="row" id=previous>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <div class="demo_group">
+                    <div class="demo_name">Ubuntu Chatbot - Retrieval </div>
+                    <div class="demo_name">Ubuntu Chatbot - Generative </div>
+                    <div class="demo_name">Opinion Target </div>
+                    <div class="demo_name">CHURN </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                    <div class="demo_url"><a href="/chatbot/ubuntu">/chatbot/ubuntu</a></div>
+                    <div class="demo_url"><a href="/chatbot/ubuntuseq2seq">/chatbot/ubuntuseq2seq</a></div>
+                    <div class="demo_url"><a href="/opinion">/opinion</a></div>
+                    <div class="demo_url"><a href="/churn">/churn</a></div>
             </div>
             <div class="col-md-1"></div>
         </div>
