--- a/static/stylesheets/error.css
+++ b/static/stylesheets/error.css
@@ -1,11 +1,40 @@
-h1 {
-	
+#index_row {
+	text-align: center;
 }
 
-.demo {
+#welcome {
+	font-weight: 200;
+	font-size: 40px;
+}
+
+h1 {
+	font-weight: 100;
+}
+
+#working .demo_name {
+	font-size: 20px;
+    font-weight: 400;
+    margin: 5px;
+    text-align: right;
+}
+#previous .demo_name {
 	font-size: 20px;
     font-weight: 200;
     margin: 5px;
+    text-align: right;
+}
+#working .demo_url {
+	font-size: 20px;
+    font-weight: 400;
+    margin: 5px;
+    text-align: left;
+}
+
+#previous .demo_url {
+	font-size: 20px;
+    font-weight: 200;
+    margin: 5px;
+    text-align: left;
 }
 
 #banner_row {
@@ -21,7 +50,10 @@ h1 {
 	margin-bottom: 20px;
 }
 
-#index_row {
+.group_title {
+	font-size: 24px;
+    font-weight: 400;
+    margin: 20px 0 5px 0;
 	text-align: center;
 }
 
