--- a/templates/error.html
+++ b/templates/error.html
@@ -49,7 +49,7 @@
                 <div class="demo_url"><a href="/summarization">/summarization</a></div>
                 <div class="demo_url"><a href="/sfid">/sfid</a></div>
                 <div class="demo_url"><a href="/neural_programmer/swisscom">/neural_programmer/swisscom</a></div>
-                <div class="demo_url"><a href="/chatbot/goaloriented">/chatbot/goaloriented</a></div>
+                <div class="demo_url"><a href="/go_chatbot">/go_chatbot</a></div>
                 <div class="demo_url"><a href="/emotion">/emotion</a></div>
                 <div class="demo_url"><a href="/grocery">/grocery</a></div>
                 <div class="demo_url"><a href="/argumentation">/argumentation</a></div>
