--- a/summarization/templates/summarization.html
+++ b/summarization/templates/summarization.html
@@ -41,7 +41,11 @@
             </div>
             <div class="radio">
                 <input type='radio' name='dummy' id='radio-gen'>
-                <label for='radio-gen'>Generative model</label>
+                <label for='radio-gen'>Generative model (diverse beam search</label>
+            </div>
+            <div class="radio">
+                <input type='radio' name='dummy' id='radio-gen'>
+                <label for='radio-gen-old'>Old Generative model (classic beam search)</label>
             </div>
             <div class="message" id="error-message">
                 <i class="icon icon-026-exclamation-mark-circle" aria-hidden="true"></i>
