small bug fix on summarization

--- a/summarization/templates/summarization.html
+++ b/summarization/templates/summarization.html
@@ -44,7 +44,7 @@
                 <label for='radio-gen'>Generative model (diverse beam search</label>
             </div>
             <div class="radio">
-                <input type='radio' name='dummy' id='radio-gen'>
+                <input type='radio' name='dummy' id='radio-gen-old'>
                 <label for='radio-gen-old'>Old Generative model (classic beam search)</label>
             </div>
             <div class="message" id="error-message">
