Modified config template for chestxray

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -72,6 +72,12 @@
     color: #348edd;
     font-weight: bold;
 }
+
+.blue {
+    color: black;
+    font-weight: bold;
+}
+
 .green {
     color: green;
     font-weight: bold;
