--- a/templates/ner/ner.html
+++ b/templates/ner/ner.html
@@ -59,10 +59,10 @@
             <div class="row" id="legend" hidden>
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
-                    <div class="col-md-3 legend_item"><span class="fa fa-square red"></span> Person </div>
-                    <div class="col-md-3 legend_item"><span class="fa fa-square blue"></span> Organization </div>
-                    <div class="col-md-3 legend_item"><span class="fa fa-square green"></span> Location </div>
-                    <div class="col-md-3 legend_item"><span class="fa fa-square orange"></span> Miscellanious </div>                
+                    <div class="col-md-4 legend_item"><span class="fa fa-square red"></span> Person</div>
+                    <div class="col-md-4 legend_item"><span class="fa fa-square blue"></span> Organization</div>
+                    <div class="col-md-4 legend_item"><span class="fa fa-square green"></span> Location</div>
+                    <!--                    <div class="col-md-3 legend_item"><span class="fa fa-square orange"></span> Miscellaneous </div>                -->
                 </div>
                 <div class="col-md-1"></div>
             </div>
