--- a/summarization/static/summarization.css
+++ b/summarization/static/summarization.css
@@ -28,9 +28,8 @@
     margin-top: 32px;
 }
 
-/*
-* Ellipsis loader in button start
-*/
+/* Displays loader into the button when the user submit the url */
+
 
 @keyframes blink {
   0% {
@@ -77,54 +76,102 @@
     margin: 0;
 }
 
-/*
-* Ellipsis loader in button end
-*/
+/*  Ellipsis loader in button end   */
 
 #tab-results{
     padding-top: 64px;
 }
 
 .aix-show-source {
-    display: flex;
+    width: 100%;
+    padding: 4px 16px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .aix-show-source > p {
-   font-weight: 600;
-   margin-bottom: 0px;
+    font-weight: 600;
+    font-size: 22px;
+    margin-bottom: 0px;
 }
 
 .aix-show-source > a{
-    width: 70%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
-.title{
+.title-summary{
     font-size: 24px;
     font-weight: 600;
-    padding: 0px 24px 24px 0;
+    padding: 16px;
     margin: 0px;
 }
 
-.aix-result-document span p{
-    padding
+.aix-result-content{
+    padding: 16px;
+}
+
+.summaries-container{
+    height: 100%;
+    background-color: #f8fafb;
+}
+
+.paragraph-container{
+    position: relative;
+    display: flex;
+}
+
+.index{
+    background-color: #EEF3F6;
+    border-bottom: solid 0.5px #D6D6D6;
+}
+
+.special-index{
+    background-color: rgba(214, 214, 214, 0.5);
+}
+
+.index > p{
+    width: 40px;
+    color: #474747;
+    text-align: right;
+    font-weight: 500;
+    padding: 12px 7px;
+}
+
+.special-index > p{
+    border-left: solid 3px #545454;
+    height: 100%;
+}
+
+.paragraph{
+    padding: 12px 16px;
+}
+
+.paragraph > p{
+    text-align: justify;
+    font-weight: 300;
 }
 
 .summary-container{
-    padding: 24px;
-    background-color: #F8FAFB;
+    display: flex;
 }
 
+.summary-paragraph{
+    text-align: justify;
+    padding: 12px 16px;
+}
 
+.summary-paragraph > p{
+    margin: 0px;
+    font-weight: 300;
+}
 
-
-
-
-
-
-
+.confidence{
+    color: #ADADAD;
+    font-weight: 200;
+}
 
 /* -------------------------------------------------------------------------------  */
 
