--- a/summarization/templates/summarization.html
+++ b/summarization/templates/summarization.html
@@ -74,7 +74,7 @@
                 <!-- Contain the results of the extractive/generative summary -->
             </div>
         </div>
-        <div class="col-lg-12 flex-items-xs-center error-container">
+        <div id="error" class="col-lg-12 flex-items-xs-center">
         </div>
     </div>
 {% endblock %}
