--- a/summarization/static/summarization.css
+++ b/summarization/static/summarization.css
@@ -85,10 +85,12 @@
 
 /* Error */
 
-.error-container > p{
-    line-height: 128px;
+#error > p{
+    line-height: 32px;
     text-align: center;
     color: #DD1122;
+    font-weight: 300;
+    padding-bottom: 64px;
 }
 
 /* Source */
@@ -170,13 +172,14 @@
 .title-summary{
     font-size: 24px;
     font-weight: 600;
-    padding: 16px;
+    padding: 12px 16px 8px 16px;
     margin: 0px;
 }
 
 .summaries-container{
     height: 100%;
     background-color: #f8fafb;
+    padding: 12px;
 }
 
 .summary-container{
