Last bugs correction AIX-124 AIX-125

--- a/summarization/templates/summarization.html
+++ b/summarization/templates/summarization.html
@@ -41,7 +41,7 @@
     <!-- Input an URL for the summarization -->
     <div id="tab-input" class="row row-special flex-items-xs-bottom flex-items-xs-center input-url">
         <div class="col-xs col-md-8">
-            <div class="input-field input-field-url" data-init="auto">
+            <div class="input-field input-field--fixed input-field-url" data-init="auto">
                 <input type="text" id="url-submit" placeholder="Enter the URL (e.g. of an article) to create a summary of it.">
                 <label for="url-submit">Enter the URL</label>
             </div>
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <!-- Displays summarization results -->
+    <!-- Displays summary results -->
     <div id="tab-results" class="row aix-row aix-invisible result">
         <div class="col-lg-6 article-container result">
             <div id="aix-show-source" class="aix-show-source result">
